<?xml version="1.0"?>
<package format="2">
  <name>collect_calib_data</name>
  <version>0.0.0</version>
  <description>The collect_calib_data package</description>

  <maintainer email="s16c1044sc@s.chibakoudai.jp">KentaKawamata</maintainer>
  <<author email="s16c1044sc@s.chibakoudai.jp">KentaKawamata</author>

  <license>Apache-v2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>

</package>
